Fixed background image size on mobile.

--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -134,7 +134,8 @@ body
   margin 0 auto
   top 0
   width 100%
-  height 100%
+  min-height 100vh
+  height auto
   img
     object-fit cover
     width auto
